# RayTrace

./: CMakeLists.txt  CopyFile.bat  Readme.txt  cmake_x86.bat
doc/: Python_Sampler.py  Sample_HemisPhere.py  TraceMap.uml  samples_disk.py
lib/: RayTraceLib.lib
src/PythonLaby/: CMakeLists.txt  Python_Regular.py  setup.py.in
src/RayTraceLib/: CMakeLists.txt  RayTraceLib.cpp  RayTraceLib.h
src/RayTraceLib/Cameras/: Camera.h  Fisheye.h  Fisheys.cpp  Pinhole.cpp  Pinhole.h  Spherical.cpp  Spherical.h  SteroCamera.cpp  SteroCamera.h  ThinLens.cpp  ThinLens.h
src/RayTraceLib/Geometric Objects/: GeometricObject.cpp
src/RayTraceLib/Geometric Objects/Beveled Ojects/: BeveledWedge.cpp  BeveledWedge.h
src/RayTraceLib/Geometric Objects/Compound Objects/: Grid.cpp  Rosette.cpp
src/RayTraceLib/Geometric Objects/Part Objects/: ConvexPartSphere.cpp  ConvexPartSphere.h
src/RayTraceLib/Geometric Objects/Primitives/: OpenCylinder.cpp  OpenCylinder.h  Rectangle.cpp  Rectangle.h  Sphere.cpp  Sphere.h  Torus.h
src/RayTraceLib/Lights/: AreaLight.cpp
src/RayTraceLib/Materials/: Reflective.cpp
src/RayTraceLib/Samplers/: Sampler.cpp  Sampler.h
src/RayTraceLib/Tracers/: Tracer.cpp  Tracer.h
src/RayTraceLib/Utilities/: Mesh.h  ply.c
src/RayTraceLib/World/: ViewPlane.cpp  ViewPlane.h  World.cpp  World.h
src/RayTraceWindows/: CMakeLists.txt
src/RayTraceWindows/Source Files/: RenderThread.cpp  RenderThread.h  main.cpp  raytracewindows.cpp  raytracewindows.h
src/RayTraceWindows/form/: raytracewindows.ui
src/RayTraceWindows/resource/: RayTraceWindows.rc  raytracewindows.pro  raytracewindows.qrc
src/RayTraceWindows/src/: RenderThread.h  main.cpp  raytracewindows.cpp  raytracewindows.h
src/RayWindows/form/: ui_generate.bat
src/RayWindows/src/: RayWindows.pro  RayWindows.vcxproj  RayWindows.vcxproj.filters  main.cpp  raymainwindow.cpp  raymainwindow.h  raymainwindow.ui  ui_raymainwindow.h
src/RayWindows/src/debug/: RayWindows.ilk  moc_raymainwindow.cpp
src/RayWindows/src/debug/RayWindows.tlog/: CL.read.1.tlog  CL.write.1.tlog  RayWindows.lastbuildstate  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/pbrt.vs2013/: RayWindows.sln
src/pbrt.vs2013/RayTraceLib/: RayTraceLib.vcxproj  RayTraceLib.vcxproj.filters
src/pbrt.vs2013/RayTraceLib/Debug/: vc120.idb
src/pbrt.vs2013/RayTraceLib/Debug/RayTraceLib.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  RayTraceLib.lastbuildstate  RayTraceLib.write.1u.tlog  cl.command.1.tlog  lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/pbrt.vs2013/RayTraceWindows/: RayTraceWindows.vcxproj  RayTraceWindows.vcxproj.filters
src/pbrt.vs2013/RayTraceWindows/GeneratedFiles/: qrc_raytracewindows.cpp  ui_raytracewindows.h
src/pbrt.vs2013/RayTraceWindows/GeneratedFiles/Debug/: moc_raytracewindows.cpp
