project(RayWindows)
cmake_minimum_required(VERSION 2.8.6)

macro(source_group_by_dir source_files)
    if(MSVC)
        set(sgbd_cur_dir ${CMAKE_CURRENT_SOURCE_DIR})
        foreach(sgbd_file ${${source_files}})
			#message("!!!sgbd_cur_dir: ${sgbd_cur_dir}")
			#message("!!!file: ${sgbd_file}")
			string(REGEX REPLACE ${sgbd_cur_dir}/ "" sgbd_fpath ${sgbd_file})
			string(REGEX REPLACE "/.*" "" sgbd_group_name ${sgbd_fpath})
			string(COMPARE EQUAL ${sgbd_fpath} ${sgbd_group_name} sgbd_nogroup)
			# message("!!!gname: ${sgbd_fpath}")
			# message("!!!xxx: ${sgbd_group_name}")
            if(sgbd_nogroup)
                set(sgbd_group_name "//")
            endif(sgbd_nogroup)
            source_group(${sgbd_group_name} FILES ${sgbd_file})
        endforeach(sgbd_file)
    endif(MSVC)
endmacro(source_group_by_dir)

macro(include_add_by_dir source_files)
    if(MSVC)
        set(sgbd_cur_dir ${CMAKE_CURRENT_SOURCE_DIR})
        foreach(sgbd_file ${${source_files}})
			string(REGEX REPLACE ".*/" "" sgbd_fpath ${sgbd_file})
			string(REGEX REPLACE "${sgbd_fpath}" "" sgbd_fdir ${sgbd_file})
			#message("!!!sgbd_cur_dir: ${sgbd_fdir}")
			string(COMPARE EQUAL ${sgbd_fpath} ${sgbd_fdir} sgbd_noinclude)
			# message("!!!gname: ${sgbd_fpath}")
			# message("!!!xxx: ${sgbd_group_name}")
            if(sgbd_noinclude)
                set(sgbd_fdir "./")
            endif(sgbd_noinclude)
			INCLUDE_DIRECTORIES(${sgbd_fdir})
        endforeach(sgbd_file)
    endif(MSVC)
endmacro(include_add_by_dir)


SET(CMAKE_INSTALL_PREFIX "${PROJECT_SOURCE_DIR}/bin/")
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(CMAKE_CONFIGURATION_TYPES "Debug" "Release" "Relwithdebinfo")

#set(CMAKE_CXX_FLAGS_DEBUG "-g3")
#set(CMAKE_CXX_FLAGS_RELEASE "-O2")

set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG}   /MD /Zi /Od /Ob0 /RTC1")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MD /Zi /Od /Ob0 /RTC1")

set(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO}   /MD /Zi /Od /Ob0 /RTC1")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /MD /Zi /Od /Ob0 /RTC1")  

set(CMAKE_C_FLAGS_RELEASE   "/MT /O2 /Ob2 /DNDEBUG") 
set(CMAKE_CXX_FLAGS_RELEASE "/MT /O2 /Ob2 /DNDEBUG")  

if ( MSVC )
foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
    string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${PROJECT_SOURCE_DIR}/bin)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${PROJECT_SOURCE_DIR}/bin)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${PROJECT_SOURCE_DIR}/bin)
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${PROJECT_SOURCE_DIR}/lib)
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )
endif ( MSVC )

add_subdirectory(src/RayTraceLib)
add_subdirectory(src/RayTraceWindows)